# Cache-Analysis-Framework-Based-on-Staic-Access-Patterns

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pipeline.py
backend/: comparison_main.py  comparison_reports.py  main.py  reports.py
backend/plotting/: comparison_figures.py  figures.py
backend/tests/: test_main.py  test_reports.py
comparisions/: benchmark_manifest.json  cachegrind_parser.py  experiment_stats.py  run_comparison.py  scale_polybench.py
comparisions/performance-baseline/: expected_summaries.json  runtime_after.csv  runtime_before.csv  speedup.csv
include/analysis/: MissClassifier.hpp  SimulationStats.hpp
include/ap/: AccessEvent.hpp  AccessLayout.hpp  ApNode.hpp  EventBuilder.hpp  IndexExpr.hpp  Region.hpp
include/cache/: CacheHierarchy.hpp  CacheLevel.hpp  CacheSet.hpp
include/memory/: AddressMapper.hpp  MemoryLayout.hpp
include/pipeline/: EventConsumer.hpp  Pipeline.hpp  PipelineResult.hpp
include/report/: CsvWriter.hpp  JsonWriter.hpp  MarkdownWriter.hpp
settings/: cache.yaml  cachegrind.yaml
src/: main.cpp
src/analysis/: MissClassifier.cpp
src/ap/: AddressResolver.cpp  ApLoader.cpp  EventBuilder.cpp  IndexExpr.cpp
src/cache/: CacheHierarchy.cpp  CacheLevel.cpp  CacheSet.cpp
src/cli/: RunLogger.cpp
src/memory/: AddressMapper.cpp  MemoryLayout.cpp
src/pipeline/: EventConsumer.cpp  Pipeline.cpp
src/report/: CsvWriter.cpp  JsonWriter.cpp  MarkdownWriter.cpp
tests/analysis/: test_simulation_stats.cpp
tests/ap/: test_address_resolver.cpp  test_ap_loader_v2.cpp  test_event_builder.cpp  test_event_builder_v2.cpp  test_index_expr.cpp
tests/cache/: test_cache_hierarchy.cpp  test_cache_level.cpp  test_cache_set.cpp
tests/cli/: test_run_logger.cpp
tests/integration/: test_pipeline_v2.cpp
tests/memory/: test_address_mapper.cpp  test_memory_layout.cpp
tests/report/: test_csv_writer.cpp  test_json_writer.cpp  test_markdown_writer.cpp
